<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.spaceman</groupId>
        <artifactId>TPort-parent</artifactId>
        <version>1.1</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>V26_3</artifactId>
    <version>${TPortVersion}</version>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--suppress VulnerableLibrariesLocal, MavenPackageUpdate -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <!--suppress MavenPackageUpdate -->
            <version>26.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>com.spaceman</groupId>
            <artifactId>TPort</artifactId>
            <version>${TPortVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

</project>